--- a/pages/main/css/style.css
+++ b/pages/main/css/style.css
@@ -919,15 +919,7 @@ body {
     padding: 0 11px;
   }
 }
-.ibg img {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
+
 
 h2 {
   font-weight: 400;
@@ -1238,7 +1230,23 @@ a {
 .main-screen__bg {
   background: #283035;
 }
-
+.main-screen__donate { 
+padding-top: 80px;
+}
+@media (max-width: 768px) {
+.main-screen__donate { 
+padding-top: 34px;
+	}
+}
+.ibg img{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	-o-object-fit: cover;
+    	 object-fit: cover;
+}
 @media (max-width: 1220px) {
   .main-screen__title {
     font-weight: 700;
