--- a/pages/main/css/style.css
+++ b/pages/main/css/style.css
@@ -2591,7 +2591,7 @@ input[type=range].range_btn::-moz-range-thumb:active {
   }
 
   .subscribe__input .input-email {
-    max-width: 228px;
+    width: 228px;
   }
   .footer__logo {
     -ms-grid-row: 1;
