fix: add styles for form-donate
fix: add styles for form-donate

--- a/online-zoo3/pages/main/css/style.css
+++ b/online-zoo3/pages/main/css/style.css
@@ -344,7 +344,9 @@ body {
   position: relative;
   z-index: 3;
 }
-
+.form-donate__radio-amount-label.active {
+    background: url(../../../assets/icons/roller_icon.svg) center no-repeat;
+}
 .form-donate__roller {
   display: none;
   position: absolute;
