--- a/online-zoo3/pages/main/css/style.css
+++ b/online-zoo3/pages/main/css/style.css
@@ -2238,6 +2238,383 @@ a {
     margin: 0 0 20px 0;
   }
 }
+.pets {
+  margin: 0 0 100px;
+  position: relative;
+}
+.pets:before {
+  content: "";
+  position: absolute;
+  width: 292px;
+  height: 460px;
+  background: url("../../../assets/images/flowers/palm.png") center/cover no-repeat;
+  left: 0;
+  bottom: -100px;
+  z-index: -1;
+}
+.pets:after {
+  content: "";
+  position: absolute;
+  width: 368px;
+  height: 275px;
+  right: 0;
+  bottom: -100px;
+  background: url("../../../assets/images/flowers/strelitzia.png") center/cover no-repeat;
+  z-index: -1;
+}
+.pets__title {
+  display: none;
+}
+
+.pets_container {
+  position: relative;
+}
+
+.flowers-left {
+  left: -30px;
+  bottom: -100px;
+  z-index: -1;
+}
+
+.flowers-right {
+  right: -30px;
+  bottom: -100px;
+  z-index: -1;
+}
+
+.pets__slider {
+  margin: 0 auto 80px;
+  -webkit-transition: all 0.6s ease 0s;
+  transition: all 0.6s ease 0s;
+  -webkit-animation: all 0.6s ease 0s;
+          animation: all 0.6s ease 0s;
+}
+
+.slider__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -10px -15px;
+  position: relative;
+  overflow: hidden;
+}
+
+.slider__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33.333%;
+          flex: 0 1 33.333%;
+  padding: 10px 15px;
+  border-radius: 5px;
+  display: block;
+  cursor: pointer;
+  -webkit-transition: all 0.6s ease 0s;
+  transition: all 0.6s ease 0s;
+  -webkit-animation: all 0.6s ease-in-out 0s;
+          animation: all 0.6s ease-in-out 0s;
+}
+.slider__item.active, .slider__item.next {
+  display: block;
+}
+.slider__item.next {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+@media (max-width: 1440px) {
+  .slider__img {
+    overflow: hidden;
+  }
+
+  .slider__img img {
+    height: 100%;
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+@media (max-width: 1220px) {
+  .pets {
+    margin: 0 0 140px;
+  }
+  .pets:before {
+    width: 194px;
+    height: 300px;
+    bottom: -140px;
+  }
+  .pets:after {
+    width: 241px;
+    height: 180px;
+    bottom: -140px;
+  }
+
+  .slider__items {
+    margin: -46px -14px;
+  }
+
+  .slider__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 33.333%;
+            flex: 0 1 33.333%;
+    padding: 46px 14px;
+  }
+}
+@media (max-width: 980px) {
+  .pets {
+    margin: 0 0 100px;
+  }
+  .pets__slider {
+    margin: 0 auto 60px;
+  }
+  .pets:before {
+    bottom: -100px;
+  }
+  .pets:after {
+    bottom: -100px;
+  }
+
+  .pets .slider__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 50%;
+            flex: 0 1 50%;
+  }
+}
+@media (max-width: 768px) {
+  .pets {
+    margin: 0 0 100px;
+  }
+  .pets__slider {
+    margin: 0 auto 60px;
+  }
+  .pets:before {
+    bottom: -100px;
+    width: 134px;
+    height: 202px;
+  }
+  .pets:after {
+    bottom: -100px;
+    width: 175px;
+    height: 131px;
+  }
+}
+@media (max-width: 600px) {
+  .pets .slider__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
+
+  .pets {
+    margin: 0 0 60px;
+  }
+  .pets__slider {
+    margin: 0 auto 20px;
+  }
+  .pets:before {
+    bottom: -60px;
+    width: 54px;
+    height: 80px;
+  }
+  .pets:after {
+    bottom: -60px;
+    width: 68px;
+    height: 71px;
+  }
+
+  .slider__items {
+    margin: -10px 0;
+  }
+
+  .slider__item {
+    padding: 10px 0px;
+  }
+
+  #card_04,
+#card_06 {
+    display: none;
+  }
+}
+.slider__item_wrapper {
+  position: relative;
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: #ffffff;
+  border-radius: 5px;
+}
+.slider__item_wrapper:before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  bottom: -1px;
+  left: -1px;
+  right: -1px;
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  border-radius: 5px;
+  z-index: -1;
+}
+
+.slider__img {
+  overflow: hidden;
+  -webkit-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+  display: block;
+  position: relative;
+}
+.slider__img:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+}
+.slider__img:hover:after {
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.slider__img img {
+  border-radius: 5px 5px 0 0;
+}
+
+.slider__text_animation {
+  display: block;
+  -webkit-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+}
+
+.slider__text_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px 11px 14px 11px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: hidden;
+  border-radius: 0 0 5px 5px;
+  z-index: -1;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+.slider__text {
+  color: #000000;
+}
+
+.slider__title {
+  font-weight: 500;
+  line-height: 140%;
+  text-transform: uppercase;
+}
+
+.slider__location {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 120%;
+}
+
+.slider__icon {
+  padding: 0 0 0 12px;
+}
+
+.slider__item_wrapper:hover .slider__img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  border-radius: 5px;
+}
+.slider__item_wrapper:hover .slider__text_animation {
+  -webkit-transform: translate(0, -60px);
+          transform: translate(0, -60px);
+}
+.slider__item_wrapper:hover .slider__text {
+  color: #ffffff;
+}
+
+.slider-arrow {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 62px;
+  height: 62px;
+  border-radius: 50%;
+  top: 40.8%;
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  cursor: pointer;
+}
+.slider-arrow:hover {
+  background: #4B9200;
+}
+.slider-arrow img {
+  vertical-align: baseline;
+}
+
+.arrow-prev {
+  left: -72px;
+}
+
+.arrow-next {
+  right: -72px;
+}
+
+@media (max-width: 1220px) {
+  .slider-arrow {
+    top: calc(50% - 75px);
+  }
+
+  .arrow-prev {
+    left: 34.5%;
+  }
+
+  .arrow-next {
+    right: 34.5%;
+  }
+}
+@media (max-width: 980px) {
+  .slider-arrow {
+    top: calc(50% - 65px);
+  }
+
+  .arrow-prev {
+    left: 38%;
+  }
+
+  .arrow-next {
+    right: 38%;
+  }
+}
+@media (max-width: 600px) {
+  .slider-arrow {
+    display: none;
+  }
+}
+.pets__button {
+  margin: 0 auto;
+  -webkit-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+}
+.pets__button:hover {
+  background: #E47209;
+}
+.pets__button:active {
+  background: #4B9200;
+}
+.pets__button:disabled {
+  background: #767474;
+}
+
 .pick-feed {
   background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
   opacity: 0.9;
