--- a/song-bird/pages/main/css/style.css
+++ b/song-bird/pages/main/css/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=Noto+Music&family=Roboto:wght@300;400;500;700&display=swap"); /*Обнуление*/
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&family=Noto+Music&family=Roboto:wght@300;400;500;700&display=swap");
+
+/*Обнуление*/
 * {
   padding: 0px;
   margin: 0px;
@@ -97,7 +99,6 @@ body {
   max-width: 1180px;
   padding: 0 10px;
   margin: 0px auto;
-  flex: 1 1 auto;
 }
 
 @media (max-width: 1440px) {
@@ -153,11 +154,26 @@ h4 {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 640px) {
   h1{
     text-align: center;
     line-height: 150%;
     margin: 30px 0;
+    font-size: 30px;
+  }
+
+  h2{
+    font-size: 40px;
+  }
+
+  h3{
+    font-size: 30px;
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  h4{
+    font-size: 22px;
   }
 }
 
@@ -168,26 +184,34 @@ a {
 .logo {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
+  display: block;
   position: relative;
   cursor: pointer;
   z-index: 5;
-  height: 85px;
-  background-size: contain;
+}
+
+.logo-header{
+  height: 55px;
+}
+
+@media (max-width: 640px) {
+  .logo-header{
+    height: 45px;
+  }
 }
 
 .header {
   position: relative;
   width: 100%;
   z-index: 20;
-  background: rgba(0, 0, 0, 0.1);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .header__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: 80px;
+  min-height: 50px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -195,6 +219,13 @@ a {
       -ms-flex-align: center;
           align-items: center;
   margin: 10px 0;
+}
+
+@media (max-width: 640px) {
+  .header__row {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .header__menu {
@@ -209,24 +240,35 @@ a {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding: 5px 0;
+  flex-direction: row;
 }
 
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   position: relative;
   z-index: 2;
+  flex-direction: row;
 }
 
 .menu__item {
-  font-size: 24px;
+  font-size: 20px;
+  position: relative;
 }
 
 .menu__item:not(:last-child) {
-  margin-right: 50px;
+  margin-right: 80px;
+}
+
+@media (max-width: 640px) {
+  .header__menu {
+    padding: 20px 0;
+  }
+
+  .menu__item:not(:last-child) {
+    margin-right: 60px;
+  }
 }
 
 .menu__link {
@@ -247,37 +289,65 @@ a {
   margin-right: 20px;
 }
 
-.main {
+.sound__off{
+  width: 2px;
+  height: 30px;
+  background-color: #fff;
+  transform: rotate(-45deg);
+  position: absolute;
+  top: 3px;
+  left: 10px;
+  display: block;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.main,
+.quiz {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
   min-height: 100%;
 }
 
-.main-screen {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  min-height: 100vh;
+.main {
+  margin-top: -75px;
 }
 
-#video {
+@media (max-width: 640px) {
+  .main {
+    margin-top: -135px;
+  }
+}
+
+.main-screen {
   position: relative;
-  min-width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
+  display: flex;
+  display: flex;
+  flex-direction: column;
+  padding: 30px 15px;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .main-screen__body{
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
+  position: relative;
+  z-index: 2;
   display: flex;
   flex: 1 1 auto;
   justify-content: center;
   align-items: center;
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.video {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  object-fit: cover;
 }
 
 .main-screen__container {
@@ -321,10 +391,6 @@ a {
   background: #f7851b;
 }
 
-@media (max-width: 980px) {
-  
-}
-
 @media (max-width: 768px) {
   .main-screen__button {
     width: 300px;
@@ -333,7 +399,10 @@ a {
 }
 
 @media (max-width: 640px) {
-  
+  .main-screen__button {
+    width: 290px;
+    min-height: 60px;
+  }
 }
 
 .footer {
@@ -356,7 +425,7 @@ a {
 
 .footer-row__copy {
   display: block;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .logo-rss {
@@ -366,7 +435,7 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 120px;
+  width: 80px;
 }
 
 @media (max-width: 980px) {
@@ -375,9 +444,9 @@ a {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 640px) {
   .footer {
-    padding: 20px 0;
+    padding: 15px 0;
   }
 
   .footer__container {
@@ -397,14 +466,11 @@ a {
   }
 
   .footer__wrapper {
+    display: flex;
     flex-direction: column;
   }
 
   .footer-row__copy{
-    margin: 10px 0 30px;
-  }
-
-  .logo-rss{
-    margin-bottom: 10px;
+    margin: 0 0 10px;
   }
 }
