--- a/song-bird/pages/quiz/css/style_quiz.css
+++ b/song-bird/pages/quiz/css/style_quiz.css
@@ -22,6 +22,12 @@
           justify-content: space-between;
 }
 
+@media (max-width: 980px) {
+  .menu__list_quiz {
+    flex-direction: column;
+  }
+}
+
 .menu__item_quiz {
   margin: 0;
   -webkit-box-flex: 1;
@@ -46,12 +52,12 @@
   align-items: center;
 }
 
-.main {
+.quiz {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   display: block;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .quiz-content__container {
@@ -76,6 +82,13 @@
   margin-bottom: 25px;
   background: rgba(0, 0, 0, 0.3);
   border-radius: 10px;
+}
+
+@media (max-width: 640px) {
+  .quiz-content__player{
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .quiz-content__image{
@@ -119,6 +132,29 @@
   min-width: 300px;
 }
 
+@media (max-width: 640px) {
+  .quiz-content__item{
+    padding: 0;
+    flex: 1 0 100%;
+  }
+
+  .quiz-content__track {
+    min-width: 500px;
+  }
+}
+
+@media (max-width: 550px) {
+  .quiz-content__track {
+    min-width: 400px;
+  }
+}
+
+@media (max-width: 440px) {
+  .quiz-content__track {
+    min-width: 280px;
+  }
+}
+
 .quiz-content__info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -133,10 +169,16 @@
   margin-left: -15px;
 }
 
+@media (max-width: 980px) {
+  .quiz-content__info {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .button {
-  width: 100%;
   margin: 25px 15px;
-  padding: 1.5rem 0.75rem;
+  padding: 25px 0;
   background: rgba(0, 0, 0, 0.5);
   border: 1px solid #444;
   color: #fff;
@@ -144,22 +186,34 @@
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.5s ease 0s;
   border-radius: 0.25rem;
-  font-size: 20px;
+  font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 0.2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.button:hover,
+@media (min-width: 985px) {
+  .button {
+    width: 100%;
+  }
+}
+
+.button__green,
 .result__button {
   background-color: #6eac09;
   border-color: #85b438;
+}
+
+.result__button{
+  width: 100%;
 }
 
 .result__button:hover{
   background-color: #98d33a;
 }
 
-.button:active,
 .result__button:active {
   transform: translateY(5px);
   background-color: #b7f74f;
@@ -207,14 +261,59 @@
   margin-top: 22px;
 }
 
-.timebar-track {
+.timebar_second {
+  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  margin-top: 22px;
+}
+
+.timebar-track_color{
+  z-index: 1;
+  position: relative;
+  width: 0%;
   display: block;
   height: 4px;
+  background-color: #6eac09;
+}
+
+.timebar-track__color-second{
+  z-index: 1;
+  position: relative;
+  width: 0%;
+  display: block;
+  height: 4px;
+  background-color: #6eac09;
+}
+
+.timebar-track_white{
   background-color: #b4b2b2;
-  /* background: linear-gradient(to right, rgb(0, 188, 140) 0%, rgb(61, 133, 140) 0%, rgb(115, 115, 115) 0%, rgb(115, 115, 115) 100%); */
+  height: 4px;
+  margin-top: -4px;
+}
+
+.timebar-track__white-second{
+  background-color: #b4b2b2;
+  height: 4px;
+  margin-top: -4px;
 }
 
 .timebar-circle {
+  background-color: #b4b2b2;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  -webkit-transform: translate(-50%, calc(-50% + 2px));
+  transform: translate(-50%, calc(-50% + 2px));
+  -webkit-box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.timebar-circle_second {
   background-color: #b4b2b2;
   width: 16px;
   height: 16px;
@@ -248,6 +347,12 @@
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
+}
+
+@media (max-width: 980px) {
+  .info-column {
+    margin-bottom: 10px;
+  }
 }
 
 .info-column__item {
@@ -289,7 +394,7 @@
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background-color: #444;
+  background-color: #fff;
   margin-right: 15px;
 }
 
@@ -340,6 +445,16 @@
   margin-right: 2rem;
 }
 
+@media (max-width: 640px) {
+  .card-body {
+    flex-direction: column;
+  }
+
+  .card-body_img {
+    margin: 0 auto;
+  }
+}
+
 .card-body__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -371,7 +486,7 @@
 }
 
 .result {
-  display: block;
+  display: none;
   background-color: rgba(0, 0, 0, 0.1);
 }
 
