--- a/song-bird/pages/quiz/scss/style_quiz.scss
+++ b/song-bird/pages/quiz/scss/style_quiz.scss
@@ -277,11 +277,11 @@
     border-radius: 5px;
     -webkit-transition: all 0.8s ease 0s;
     transition: all 0.8s ease 0s;
-    &:hover,
-    &:active {
-      background-color: #6eac09;
-      border-color: #85b438;
-    }
+    // &:hover,
+    // &:active {
+    //   background-color: #6eac09;
+    //   border-color: #85b438;
+    // }
   }
   &__card {
     position: relative;
